fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 /* Hero Section */
 .header{
     display: flex;
